--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg col-12">
-        <div class="container-fluid col-3">
+        <div class="container-fluid col-sm-8 col-md-4 col-lg-7">
             <!--Menú-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -27,7 +27,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href=".../Prueba Coderhouse/Pages/hombres.html">Hombres</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="../Pages/hombres.html">Hombres</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
@@ -54,11 +55,11 @@
             </div>
         </div>
         <!--Logo-->
-        <a class="navbar-brand col-5" href="./index.html">
+        <a class="navbar-brand col-sm-2 col-md-4 col-lg-3" href="./index.html">
             <img src="../img/logo-conquer.png" alt="logoconquer">
         </a>
         <!--iconos-->
-        <form class="d-flex align-items-center text-white col-3">
+        <form class="d-flex align-items-center text-white col-sm-3 col-md-4 col-lg-2">
             <a class="me-3 text-white"><i class="fas fa-search"></i></a>
             <a class="me-3 text-white"><i class="fas fa-user"></i></a>
             <a class="me-3 text-white"><i class="fas fa-shopping-cart"></i></a>
@@ -76,16 +77,33 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                        aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        aria-label="Slide 7"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../img/playera-banner-1.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/playera-banner-1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/playera-banner.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/playera-banner-2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/playera-banner-1.jpg" class="d-block w-100" alt="...">
+                        <img src="./img/playera-banner-3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/playera-banner-4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/playera-banner-5.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/playera-banner-6.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
