Agrego div en index para promociones

--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
 
     </div>
 
+    <div id="descuento" class="col-12">
+        <p>
+            3 y 6 MESES SIN INTERESES <br> EN COMPRAS DESDE $899 MXN <br> Envío gratis 
+        </p>
+    </div>
+
     <!-- Footer -->
     <footer>
         <div class="footer-content">
