creacion de legales en index

--- a/index.html
+++ b/index.html
@@ -156,11 +156,56 @@
 
     </div>
 
-    <div id="descuento" class="col-12">
+    <div id="descuento" class="col-12 w-100">
         <p>
-            3 y 6 MESES SIN INTERESES <br> EN COMPRAS DESDE $899 MXN <br> Envío gratis 
+            3 y 6 MESES SIN INTERESES <br> EN COMPRAS DESDE $899 MXN <br> Envío gratis
         </p>
     </div>
+    
+
+        <div class="row row-cols-1 row-cols-md-4 g-3">
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Envíos a todo México</h5>
+                  <p class="card-text">Envíos gratis en compras a partir de $899 MXN<br>.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Devoluciones gratuitas</h5>
+                  <p class="card-text">¿No quieres conservar tu pedido? La devolución va por nuestra cuenta y te
+                    regresamos el 100% de tu dinero</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Compra segura</h5>
+                  <p class="card-text">Tu información está 100% protegida<br>.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Hasta 6 msi</h5>
+                  <p class="card-text">En compras mayores a 899<br>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+    </div>
+
 
     <!-- Footer -->
     <footer>
