corrección de enlaces en el menu de index a otras secciones

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -16,55 +16,59 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg col-12">
-        <div class="container-fluid col-3">
-            <!--Menú-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page"
-                            href="../Prueba Coderhouse/Pages/hombres.html">Hombres</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Lanzamientos
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Hombres</a></li>
-                            <li><a class="dropdown-item" href="#">Mujeres</a></li>
-                            <li><a class="dropdown-item" href="#">Sudaderas</a></li>
-                            <li><a class="dropdown-item" href="#">Shorts</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
+    <nav class="navbar navbar-expand-lg w-100 text-white">
+        <div class="row col-12">
+            <div class="container-fluid d-flex col-4 col-md-6 col-lg-6">
+                <!--Menú-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../Pages/hombres.html">Hombres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Lanzamientos
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Hombres</a></li>
+                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
+                                <li><a class="dropdown-item" href="#">Sudaderas</a></li>
+                                <li><a class="dropdown-item" href="#">Shorts</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!--Logo-->
+            <div class="d-inline d-sm-flex justify-content-between col-6 col-md-6 col-lg-6">
+                <a class="navbar-brand d-flex col-auto" href="./index.html">
+                    <img src="../img/logo-conquer.png" class="w-100" alt="logoconquer">
+                </a>
+                <!--iconos-->
+                <form class="d-flex align-items-center text-white w-50">
+                    <a class="me-3 text-white"><i class="fas fa-search"></i></a>
+                    <a class="me-3 text-white"><i class="fas fa-user"></i></a>
+                    <a class="me-3 text-white"><i class="fas fa-shopping-cart"></i></a>
+                </form>
             </div>
         </div>
-        <!--Logo-->
-        <a class="navbar-brand col-5" href="./index.html">
-            <img src="../img/logo-conquer.png" alt="logoconquer">
-        </a>
-        <!--iconos-->
-        <form class="d-flex align-items-center text-white col-3">
-            <a class="me-3 text-white"><i class="fas fa-search"></i></a>
-            <a class="me-3 text-white"><i class="fas fa-user"></i></a>
-            <a class="me-3 text-white"><i class="fas fa-shopping-cart"></i></a>
-        </form>
     </nav>
+
 
     <!--Contacto-->
     <h1>¿Tienes dudas? ¡Escríbenos! :D</h1>
