--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="../Pages/hombres.html">Hombres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
+                            <a class="nav-link" href="../Pages/mujeres.html">Mujeres</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -46,7 +46,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
+                            <a class="nav-link" href="#">Arma tu playera</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
@@ -67,8 +67,6 @@
                 </form>
             </div>
         </div>
-
-
     </nav>
 
     <div class="container-fluid h-50">
