--- a/Pages/hombres.html
+++ b/Pages/hombres.html
@@ -16,163 +16,134 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg col-12">
-        <div class="container-fluid col-3">
-            <!--Menú-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../Prueba Coderhouse/Pages/hombres.html">Hombres</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Lanzamientos
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Hombres</a></li>
-                            <li><a class="dropdown-item" href="#">Mujeres</a></li>
-                            <li><a class="dropdown-item" href="#">Sudaderas</a></li>
-                            <li><a class="dropdown-item" href="#">Shorts</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
+    <nav class="navbar navbar-expand-lg w-100 text-white">
+        <div class="row col-12">
+            <div class="container-fluid d-flex col-4 col-md-6 col-lg-6">
+                <!--Menú-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../Pages/hombres.html">Hombres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Pages/mujeres.html">Mujeres</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Lanzamientos
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Hombres</a></li>
+                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
+                                <li><a class="dropdown-item" href="#">Sudaderas</a></li>
+                                <li><a class="dropdown-item" href="#">Shorts</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!--Logo-->
+            <div class="d-inline d-sm-flex justify-content-between col-6 col-md-6 col-lg-6">
+                <a class="navbar-brand d-flex col-auto" href="/index.html">
+                    <img src="../img/logo-conquer.png" class="w-100" alt="logoconquer">
+                </a>
+                <!--iconos-->
+                <form class="d-flex align-items-center text-white w-50">
+                    <a class="me-3 text-white"><i class="fas fa-search"></i></a>
+                    <a class="me-3 text-white"><i class="fas fa-user"></i></a>
+                    <a class="me-3 text-white"><i class="fas fa-shopping-cart"></i></a>
+                </form>
             </div>
         </div>
-        <!--Logo-->
-        <a class="navbar-brand col-5" href="./index.html">
-            <img src="../img/logo-conquer.png" alt="logoconquer">
-        </a>
-        <!--iconos-->
-        <form class="d-flex align-items-center text-white col-3">
-            <a class="me-3 text-white"><i class="fas fa-search"></i></a>
-            <a class="me-3 text-white"><i class="fas fa-user"></i></a>
-            <a class="me-3 text-white"><i class="fas fa-shopping-cart"></i></a>
-        </form>
     </nav>
 
     <div class="container">
         <div class="row">
-            <!--Carrusel-->
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/playera-banner-1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/playera-banner.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/playera-banner-1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
             <div id="masVendidos" class="col-md-12">
                 <div class="row">
-                    <h1>Más Vendidos</h1>
+                    <h1 id="seccionhombres">HOMBRES</h1>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gyarados.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-pollito.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gyarados.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-pollito.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gyarados.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-pollito.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
-                            <p class="card-text">CH M G EG</p>
+                            <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
                 </div>
@@ -184,12 +155,12 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <div class="footer-logo">
+            <div class="footer-logo" a href="/index.html">
                 <img src="../img/logo-conquer.png" alt="logoFooter">
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="./pages/seccionh.html">Productos</a></li>
                     <li><a href="#">Servicios</a></li>
                     <li><a href="./pages/contacto.html">Contacto</a></li>
