--- a/Pages/mujeres.html
+++ b/Pages/mujeres.html
@@ -28,10 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../Pages/hombres.html">Hombres</a>
+                            <a class="nav-link active" aria-current="page" href="./hombres.html">Hombres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
+                            <a class="nav-link" href="./mujeres.html">Mujeres</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -39,17 +39,17 @@
                                 Lanzamientos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Hombres</a></li>
-                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
+                                <li><a class="dropdown-item" href="./hombres.html">Hombres</a></li>
+                                <li><a class="dropdown-item" href="./mujeres.html">Mujeres</a></li>
                                 <li><a class="dropdown-item" href="#">Sudaderas</a></li>
                                 <li><a class="dropdown-item" href="#">Shorts</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
+                            <a class="nav-link" href="#">Arma tu playera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -69,80 +69,81 @@
         </div>
     </nav>
 
-    <div class="container-fluid h-50">
-        <div class="row">
-            <!--Carrusel-->
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                        aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                        aria-label="Slide 5"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
-                        aria-label="Slide 6"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        aria-label="Slide 7"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./img/playera-banner-1.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playera-banner-2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playera-banner-3.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playera-banner-4.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playera-banner-5.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playera-banner-6.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
 
+    <!--Contenido-->
+
+    <div class="container">
+        <div class="row">
             <div id="masVendidos" class="col-md-12">
                 <div class="row">
-                    <h1 class="my-3 my-md-5">Más Vendidos</h1>
-                    <div class="mb-2 mb-md-5 col-sm-12 col-md-3 card">
+                    <h1 id="seccionmujeres">MUJERES</h1>
+                    <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
                             <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
-                    <div class="mb-2 mb-md-5 col-sm-12 col-md-3 card">
+                    <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gyarados.jpg" alt="Tallas">
                         <div class="card-body">
                             <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
-                    <div class="mb-2 mb-md-5 col-sm-12 col-md-3 card">
+                    <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-pollito.jpg" alt="Tallas">
                         <div class="card-body">
                             <p class="card-text">CH M G EG <br>$299</p>
                         </div>
                     </div>
-                    <div class="mb-2 mb-md-5 col-sm-12 col-md-3 card">
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-gyarados.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-pollito.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-gyarados.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
+                        <img class="card-img-top" src="../img/playera-pollito.jpg" alt="Tallas">
+                        <div class="card-body">
+                            <p class="card-text">CH M G EG <br>$299</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 card">
                         <img class="card-img-top" src="../img/playera-gokublack.jpg" alt="Tallas">
                         <div class="card-body">
                             <p class="card-text">CH M G EG <br>$299</p>
@@ -153,6 +154,9 @@
         </div>
 
     </div>
+
+
+
 
     <div id="descuento" class="col-12 w-100">
         <p>
@@ -213,10 +217,10 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/seccionh.html">Productos</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="#">Productos</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="/contacto.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-social">
