correccion de enlaces de menu y footer en seccion mujeres y hombres

--- a/Pages/mujeres.html
+++ b/Pages/mujeres.html
@@ -56,7 +56,7 @@
             </div>
             <!--Logo-->
             <div class="d-inline d-sm-flex justify-content-between col-6 col-md-6 col-lg-6">
-                <a class="navbar-brand d-flex col-auto" href="./index.html">
+                <a class="navbar-brand d-flex col-auto" href="../index.html">
                     <img src="../img/logo-conquer.png" class="w-100" alt="logoconquer">
                 </a>
                 <!--iconos-->
@@ -72,7 +72,7 @@
 
     <!--Contenido-->
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div id="masVendidos" class="col-md-12">
                 <div class="row">
@@ -220,7 +220,7 @@
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="/contacto.html">Contacto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-social">
