--- a/Pages/hombres.html
+++ b/Pages/hombres.html
@@ -31,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="../Pages/hombres.html">Hombres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./Pages/mujeres.html">Mujeres</a>
+                            <a class="nav-link" href="./mujeres.html">Mujeres</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -163,7 +163,7 @@
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="./pages/seccionh.html">Productos</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-social">
