--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -28,10 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../Pages/hombres.html">Hombres</a>
+                            <a class="nav-link active" aria-current="page" href="./hombres.html">Hombres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Prueba Coderhouse/Pages/mujeres.html">Mujeres</a>
+                            <a class="nav-link" href="./mujeres.html">Mujeres</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -39,24 +39,24 @@
                                 Lanzamientos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Hombres</a></li>
-                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
+                                <li><a class="dropdown-item" href="./hombres.html">Hombres</a></li>
+                                <li><a class="dropdown-item" href="./mujeres.html">Mujeres</a></li>
                                 <li><a class="dropdown-item" href="#">Sudaderas</a></li>
                                 <li><a class="dropdown-item" href="#">Shorts</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Prueba Coderhouse/Pages/armaplayera.html">Arma tu playera</a>
+                            <a class="nav-link" href="#">Arma tu playera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../Pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <!--Logo-->
             <div class="d-inline d-sm-flex justify-content-between col-6 col-md-6 col-lg-6">
-                <a class="navbar-brand d-flex col-auto" href="./index.html">
+                <a class="navbar-brand d-flex col-auto" href="../index.html">
                     <img src="../img/logo-conquer.png" class="w-100" alt="logoconquer">
                 </a>
                 <!--iconos-->
@@ -69,11 +69,10 @@
         </div>
     </nav>
 
-
     <!--Contacto-->
-    <h1>¿Tienes dudas? ¡Escríbenos! :D</h1>
+    <h1 id="contacto">¿Tienes dudas? ¡Escríbenos! :D</h1>
     <div class="formulario-container col-12">
-        <h1>Contacto</h1>
+        <h1 id="titulocontacto">Contacto</h1>
         <form action="#" method="POST">
             <div class="campo">
                 <label for="nombre">Nombre:</label>
@@ -99,10 +98,10 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="./pages/seccionh.html">Productos</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-social">
