actualización de los iconos y logo en formato svg

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -57,7 +57,7 @@
             <!--Logo-->
             <div class="d-inline d-sm-flex justify-content-between col-6 col-md-6 col-lg-6">
                 <a class="navbar-brand d-flex col-auto" href="../index.html">
-                    <img src="../img/logo-conquer.png" class="w-100" alt="logoconquer">
+                    <img src="../img/logo-conquer.svg" id="logoconquer" class="w-100" alt="logoconquer">
                 </a>
                 <!--iconos-->
                 <form class="d-flex align-items-center text-white w-50">
