--- a/Pages/mujeres.html
+++ b/Pages/mujeres.html
@@ -57,7 +57,7 @@
             <!--Logo-->
             <div class="d-inline d-sm-flex justify-content-between col-6 col-md-6 col-lg-6">
                 <a class="navbar-brand d-flex col-auto" href="../index.html">
-                    <img src="../img/logo-conquer.png" class="w-100" alt="logoconquer">
+                    <img src="../img/logo-conquer.svg" id="logoconquer" class="w-100" alt="logoconquer">
                 </a>
                 <!--iconos-->
                 <form class="d-flex align-items-center text-white w-50">
@@ -168,7 +168,7 @@
     <div class="row row-cols-1 row-cols-md-4 g-3">
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../img/shipping.svg" class="card-img-top-icon" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Envíos a todo México</h5>
                     <p class="card-text">Envíos gratis en compras a partir de $899 MXN<br>.</p>
@@ -177,7 +177,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../img/back.svg" class="card-img-top-icon" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Devoluciones gratuitas</h5>
                     <p class="card-text">¿No quieres conservar tu pedido? La devolución va por nuestra cuenta y te
@@ -187,7 +187,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../img/safe.svg" class="card-img-top-icon" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Compra segura</h5>
                     <p class="card-text">Tu información está 100% protegida<br>.</p>
@@ -196,7 +196,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../img/credit-card.svg" class="card-img-top-icon" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Hasta 6 msi</h5>
                     <p class="card-text">En compras mayores a 899<br>.</p>
