--- a/Pages/mujeres.html
+++ b/Pages/mujeres.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Estudio mexicano enfocado en la personalización de ropa con temática gamer y otaku" />
+    <meta name="keywords" content="Playeras Estudio Mexicano Diseño Playera Mujer Otaku Gamer" />
     <link rel="stylesheet" href="../css/mujeres.css">
     <!--<link rel="stylesheet" href="./bs/bootstrap.min.css">-->
     <title>CONQUER</title>
