--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Estudio mexicano enfocado en la personalización de ropa con temática gamer y otaku" />
+    <meta name="keywords" content="Playeras Estudio Mexicano Diseño Playera Otaku Gamer" />
     <link rel="stylesheet" href="./css/index.css">
     <!--<link rel="stylesheet" href="./bs/bootstrap.min.css">-->
     <title>CONQUER</title>
@@ -13,6 +15,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700;800;900&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 
 <body>
