--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Estudio mexicano enfocado en la personalización de ropa con temática gamer y otaku" />
-    <meta name="keywords" content="Playeras Estudio Mexicano Diseño Playera Otaku Gamer" />
+    <meta name="keywords" content="Playeras Estudio Mexicano Diseño Playera Otaku Gamer Contacto Conquer" />
     <link rel="stylesheet" href="../css/contacto.css">
     <!--<link rel="stylesheet" href="../bs/bootstrap.min.css">-->
+    <link rel="icon" type="image/svg" href="../img/conquer-favicon.svg">
     <title>CONQUER</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
