--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Playeras Estudio Mexicano Diseño Playera Otaku Gamer" />
     <link rel="stylesheet" href="./css/index.css">
     <!--<link rel="stylesheet" href="./bs/bootstrap.min.css">-->
+    <link rel="icon" type="image/svg" href="./img/conquer-favicon.svg">
     <title>CONQUER</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
