actualizacion de secciones

--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -42,10 +42,10 @@
                                 Lanzamientos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./hombres.html">Hombres</a></li>
-                                <li><a class="dropdown-item" href="./mujeres.html">Mujeres</a></li>
-                                <li><a class="dropdown-item" href="#">Sudaderas</a></li>
-                                <li><a class="dropdown-item" href="#">Shorts</a></li>
+                                <li><a class="dropdown-item" href="./lanzamientos.html">Hombres</a></li>
+                                <li><a class="dropdown-item" href="./lanzamientos.html">Mujeres</a></li>
+                                <li><a class="dropdown-item" href="./lanzamientos.html">Sudaderas</a></li>
+                                <li><a class="dropdown-item" href="./lanzamientos.html">Shorts</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
