--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                                 Lanzamientos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Hombres</a></li>
-                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
-                                <li><a class="dropdown-item" href="#">Sudaderas</a></li>
-                                <li><a class="dropdown-item" href="#">Shorts</a></li>
+                                <li><a class="dropdown-item" href="./Pages/lanzamientos.html">Hombres</a></li>
+                                <li><a class="dropdown-item" href="./Pages/lanzamientos.html">Mujeres</a></li>
+                                <li><a class="dropdown-item" href="./Pages/lanzamientos.html">Sudaderas</a></li>
+                                <li><a class="dropdown-item" href="./Pages/lanzamientos.html">Shorts</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
